--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.2",
     "@fortawesome/free-solid-svg-icons": "^5.2.0",
     "@fortawesome/vue-fontawesome": "^0.1.1",
+    "axios": "^0.18.0",
+    "lodash": "^4.17.10",
+    "numbro": "^2.1.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
